e2e/tests/snapshots/test_snm_uninstall_node/snm_test__test_snm_uninstall_node_2.snap
---
source: e2e/tests/snm_test.rs
expression: res
snapshot_kind: text
---
id: 2
is: snm node list --compact

20.0.0
