e2e/tests/snapshots/test_snm_uninstall_node/snm_test__test_snm_uninstall_node_3.snap
---
source: e2e/tests/snm_test.rs
expression: res
snapshot_kind: text
---
is: snm node uninstall 20.0.0
os: 🎉 Node v20.0.0 is uninstalled
