e2e/tests/snapshots/test_snm_uninstall_node/snm_test__test_snm_uninstall_node_4.snap
---
source: e2e/tests/snm_test.rs
expression: res
snapshot_kind: text
---
is: snm node list --compact
os:
